# aiplatform

./: .gitignore  .pre-commit-config.yaml  =0.8.0  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.ci  Dockerfile.railway  Dockerfile.railway.frontend  Dockerfile.railway.lightweight  Dockerfile.railway.minimal  Dockerfile.railway.simple  Dockerfile.railway.webui  Dockerfile.webui  Makefile  PORT_DIFFERENCES.md  a.sh  add_webui.sh  deploy.sh  deploy_complete.sh  deploy_complete_railway.sh  deploy_optimized.sh  deploy_public.sh  deploy_railway.sh  deploy_railway_frontend.sh  docker-compose.public.yml  docker-compose.railway.yml  docker-compose.yml  main.py  nginx.conf  openwebui_pipeline.py  openwebui_pipeline_minimal.py  pyproject.toml  quick_deploy_guide.sh  railway-compose.yml  railway-frontend.json  railway.json  readme.md  requirements.railway.minimal.txt  requirements.railway.txt  requirements.txt  (+12 more)
.github/workflows/: ci.yml
ci/: run_in_docker.sh  run_local_ci.sh
ci_cd/: advanced_consciousness.py
config/: webui_config.json
deployment/: webui-deployment.yaml
docs/: LLM_CONFIG_AUDIT.md  USER_GUIDES.md  api_documentation.md
governance/: audit_trail.py
orchestration/: configs.py  dag.py  operators.data.json  operators.py
sovereign-stack/: docker-compose.yml
src/: agent_implementations.py  agents.data.json  llm_factory.py  mock_implementations.py  prompt.py  retrieval.py
