[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-agent-platform"
version = "1.0.0"
description = "Advanced AI platform with 7 sovereign agents integrated with Open WebUI"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "AI Behar Platform", email = "admin@aibehar.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

# Core dependencies for the FastAPI application
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "aiofiles>=23.2.1",
    "structlog>=23.2.0"
]

[project.urls]
homepage = "https://github.com/aibehar/sovereign-agent-platform"
repository = "https://github.com/aibehar/sovereign-agent-platform"
documentation = "https://github.com/aibehar/sovereign-agent-platform/docs"

[project.optional-dependencies]
# AI and ML dependencies
ai = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "transformers>=4.35.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.1.0"
]

# Data processing dependencies
data = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0"
]

# Vector database dependencies
vectordb = [
    "chromadb>=0.4.0",
    "pinecone-client>=2.2.0",
    "weaviate-client>=3.25.0",
    "faiss-cpu>=1.7.4"
]

# Development dependencies
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1"
]

# Production deployment dependencies
prod = [
    "prometheus-client>=0.19.0",
    "kubernetes>=28.1.0",
    "docker>=6.1.3"
]

# All optional dependencies
all = [
    "langchain>=0.1.0",
    "pandas>=2.0.0",
    "chromadb>=0.4.0",
    "prometheus-client>=0.19.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = false

[tool.black]
target-version = ['py39', 'py310', 'py311', 'py312']
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
